--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@ python-decouple
 pymongo>=2.8,<3.0
 mongoengine>=0.9.0
 #Flask-Mongoengine - bug tz_aware sur session
-https://github.com/MongoEngine/flask-mongoengine/tarball/master
+-e git+https://github.com/MongoEngine/flask-mongoengine.git#egg=flask-monoengine
 mongolock>=1.3.3
 
 #flanker
-https://github.com/srault95/flanker/tarball/light_deps
+-e git+https://github.com/srault95/flanker.git@light_deps#egg=flanker
 
 Flask-Script
 Flask-Login<0.3.0
@@ -21,9 +21,9 @@ Flask-BabelEx
 Flask-Admin>=1.1.0
 
 #geoip-data
-https://github.com/srault95/geoip-data/tarball/master
+-e git+https://github.com/srault95/geoip-data.git#egg=geoip-data
 
 pygeoip
 
-https://github.com/srault95/mongo-mail-tools/tarball/master
+-e git+https://github.com/srault95/mongo-mail-tools.git#egg=mongo-mail-tools
 Flask-DebugToolbar
