--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ python-decouple
 pymongo>=2.8,<3.0
 mongoengine>=0.9.0
 #Flask-Mongoengine - bug tz_aware sur session
--e git+https://github.com/MongoEngine/flask-mongoengine.git#egg=flask-monoengine
+git+https://github.com/MongoEngine/flask-mongoengine.git#egg=flask-mongoengine-dev
+
 mongolock>=1.3.3
 
 #flanker
--e git+https://github.com/srault95/flanker.git@light_deps#egg=flanker
+git+https://github.com/srault95/flanker.git@light_deps#egg=flanker-light_deps
 
 Flask-Script
 Flask-Login<0.3.0
@@ -21,9 +22,9 @@ Flask-BabelEx
 Flask-Admin>=1.1.0
 
 #geoip-data
--e git+https://github.com/srault95/geoip-data.git#egg=geoip-data
+git+https://github.com/srault95/geoip-data.git#egg=geoip-data-dev
 
 pygeoip
 
--e git+https://github.com/srault95/mongo-mail-tools.git#egg=mongo-mail-tools
+#-e git+https://github.com/srault95/mongo-mail-tools.git#egg=mongo-mail-tools
 Flask-DebugToolbar
